# Supreme_Court_LLM

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docker/: Dockerfile.api  Dockerfile.mock-njdg  Dockerfile.worker  prometheus.yml
docker/grafana/dashboards/: dashboards.yml
k8s/: configmap.yaml  deployment-api.yaml  namespace.yaml  secret.yaml  workloads.yaml
scripts/: verify.py
tests/: conftest.py  test_phase3_parser_router.py  test_phase4_retrieval.py  test_phase7_e2e.py  test_token_budget.py
uli/: __init__.py  mock_njdg.py  models.py
uli/agents/: dna_parser.py  pipeline.py
uli/api/: main.py
uli/db/: njdg_client.py  pinecone_config.py  schema.sql
uli/retrieval/: knowledge_prism.py
uli/utils/: metrics.py  token_budget.py
uli/worker/: __init__.py
