[build-system]
requires      = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "uli"
version     = "1.0.0"
description = "Universal Legal Intelligence — Supreme Court of India AI Framework"
readme      = "README.md"
requires-python = ">=3.11"
license     = {text = "Proprietary"}

[project.scripts]
uli-api    = "uli.api.main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode    = "auto"
testpaths       = ["tests"]
log_cli         = true
log_cli_level   = "INFO"

[tool.coverage.run]
source  = ["uli"]
omit    = ["tests/*", "uli/mock_njdg.py"]
